<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
		 xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
	<modelVersion>4.0.0</modelVersion>
	<prerequisites>
		<maven>3.5.2</maven>
	</prerequisites>
	<groupId>io.gatling.highcharts</groupId>
	<artifactId>gatling-highcharts-maven-archetype</artifactId>
	<packaging>pom</packaging>
	<version>2.3.0</version>

	<properties>
		<maven.compiler.source>3.7.0</maven.compiler.source>
		<maven.compiler.target>3.7.0</maven.compiler.target>
		<scala.version>2.12.3</scala.version>
		<encoding>UTF-8</encoding>

		<!--<gatling.version>2.3.0</gatling.version>-->

		<scala-maven-plugin.version>3.2.2</scala-maven-plugin.version>
		<gatling.version>2.3.0</gatling.version>
		<gatling-plugin.version>2.2.4</gatling-plugin.version>
		<gatling.skip>false</gatling.skip>

		<!-- Information required to start EC2 instances and control them via SSH -->
		<ssh.private.key>${user.home}/.ssh/my-key-pair1.ppk</ssh.private.key><!--${user.home}/.ssh/GatlingLoad.pem-->
		<ec2.key.pair.name>GatlingLoad</ec2.key.pair.name>
		<ec2.security.group>Hiccup</ec2.security.group>
		<ec2.instance.count>1</ec2.instance.count>


		<gatling.local.home>${project.basedir}/gatling/gatling-charts-highcharts-bundle-2.3.0/bin/gatling.sh</gatling.local.home>
		<gatling.install.script>${project.basedir}/src/test/resources/install-gatling.sh</gatling.install.script>
		<gatling.root>gatling-charts-highcharts-bundle-2.3.0</gatling.root>
		<gatling.java.opts> -Xms1g -Xmx25g -Xss8M -XX:+CMSClassUnloadingEnabled -XX:MaxPermSize=256M</gatling.java.opts>

		<!-- Fully qualified name of the Gatling simulation and a name describing the test -->
		<gatling.simulation>MediaTypes.APITest</gatling.simulation>
		<gatling.test.name>APITest</gatling.test.name>

		<!-- S3 integration settings -->
		<s3.upload.enabled>true</s3.upload.enabled>
		<s3.bucket>loadawstest</s3.bucket>
		<s3.subfolder>loadtest</s3.subfolder>

	</properties>

	<dependencyManagement>
		<dependencies>
			<dependency>
				<groupId>io.gatling</groupId>
				<artifactId>gatling-app</artifactId>
				<version>${gatling.version}</version>
			</dependency>
			<dependency>
				<groupId>io.gatling</groupId>
				<artifactId>gatling-recorder</artifactId>
				<version>${gatling.version}</version>
			</dependency>
			<dependency>
				<groupId>io.gatling.highcharts</groupId>
				<artifactId>gatling-charts-highcharts</artifactId>
				<version>${gatling.version}</version>
				<scope>test</scope>
			</dependency>
			<dependency>
				<groupId>org.scala-lang</groupId>
				<artifactId>scala-library</artifactId>
				<version>${scala.version}</version>
			</dependency>
			<dependency>
				<groupId>com.sun.mail</groupId>
				<artifactId>javax.mail</artifactId>
				<version>1.6.1</version>
			</dependency>

			<dependency>
				<groupId>io.gatling</groupId>
				<artifactId>gatling-maven-plugin</artifactId>
				<version>2.2.4</version>
			</dependency>
			<dependency>
				<groupId>com.ea.gatling</groupId>
				<artifactId>gatling-aws-maven-plugin</artifactId>
				<version>1.0.14</version>
			</dependency>
			<dependency>
				<groupId>org.codehaus.mojo</groupId>
				<artifactId>build-helper-maven-plugin</artifactId>
				<version>3.0.0</version>
			</dependency>
			<dependency>
				<groupId>javax</groupId>
				<artifactId>javaee-api</artifactId>
				<version>7.0</version>
				<scope>provided</scope>
			</dependency>
		</dependencies>
	</dependencyManagement>

	<dependencies>
		<dependency>
			<groupId>io.gatling.highcharts</groupId>
			<artifactId>gatling-charts-highcharts</artifactId>
			<scope>test</scope>
		</dependency>
		<dependency>
			<groupId>io.gatling</groupId>
			<artifactId>gatling-app</artifactId>
		</dependency>
		<dependency>
			<groupId>io.gatling</groupId>
			<artifactId>gatling-recorder</artifactId>
		</dependency>
		<dependency>
			<groupId>org.scala-lang</groupId>
			<artifactId>scala-library</artifactId>
		</dependency>
			<dependency>
				<groupId>com.sun.mail</groupId>
				<artifactId>javax.mail</artifactId>
				<version>1.6.1</version>
			</dependency>
		<dependency>
		<groupId>com.ea.gatling</groupId>
		<artifactId>gatling-aws-maven-plugin</artifactId>
		</dependency>
		<dependency>
			<groupId>org.codehaus.mojo</groupId>
			<artifactId>build-helper-maven-plugin</artifactId>
		</dependency>
		<dependency>
			<groupId>javax</groupId>
			<artifactId>javaee-api</artifactId>
			<version>7.0</version>
			<scope>provided</scope>
		</dependency>
	</dependencies>

	<build>
		<testSourceDirectory>src/test/scala</testSourceDirectory>
		<pluginManagement>
			<plugins>
				<plugin>
					<groupId>net.alchim31.maven</groupId>
					<artifactId>scala-maven-plugin</artifactId>
					<version>${scala-maven-plugin.version}</version>
				</plugin>
			</plugins>
		</pluginManagement>
		<plugins>
			<plugin>
				<groupId>net.alchim31.maven</groupId>
				<artifactId>scala-maven-plugin</artifactId>
				<executions>
					<execution>
						<goals>
							<goal>testCompile</goal>
						</goals>
						<configuration>
							<args>
								<arg>-Ydelambdafy:method</arg>
								<arg>-target:jvm-1.8</arg>
								<arg>-deprecation</arg>
								<arg>-feature</arg>
								<arg>-unchecked</arg>
								<arg>-language:implicitConversions</arg>
								<arg>-language:postfixOps</arg>
							</args>
						</configuration>
					</execution>
				</executions>
			</plugin>
			<plugin>
				<groupId>io.gatling</groupId>
				<artifactId>gatling-maven-plugin</artifactId>
				<version>${gatling-plugin.version}</version>
				<configuration>
					<configFolder>src/test/resources</configFolder>
					<dataFolder>src/test/resources/data</dataFolder>
					<resultsFolder>target/gatling/results</resultsFolder>
					<simulationsFolder>src/test/scala/com/phone_scenarios</simulationsFolder>
					<runMultipleSimulations>true</runMultipleSimulations>
					<excludes>
						<param>inContactAPI.EmailSMPTTest</param>
						<param>email_scenarios.InboundEmailTest</param>
					</excludes>
					<!--<simulationClass>email_scenarios.OutboundEmail</simulationClass>-->
				</configuration>
			</plugin>
			<plugin>
				<groupId>com.ea.gatling</groupId>
				<artifactId>gatling-aws-maven-plugin</artifactId>
				<version>1.0.14</version>
				<configuration>
					<simulationOptions>
						<custom.simulation.option>some value</custom.simulation.option>
					</simulationOptions>
				</configuration>
			</plugin>
			<plugin>
				<groupId>org.codehaus.mojo</groupId>
				<artifactId>build-helper-maven-plugin</artifactId>
				<version>3.0.0</version>
				<executions>
					<execution>
						<id>add-source</id>
						<phase>generate-sources</phase>
						<goals>
							<goal>add-source</goal>
						</goals>
						<configuration>
							<sources>
								<source>some directory</source>
								...
							</sources>
						</configuration>
					</execution>
				</executions>
			</plugin>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-compiler-plugin</artifactId>
                <configuration>
                    <source>10</source>
                    <target>10</target>
                </configuration>
            </plugin>
        </plugins>
	</build>
</project>
